--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
-<html>
-<body>
-
-<h1>My First Web Page</h1>
-<p>My First Paragraph</p>
-
-<p id="demo"></p>
-
-<script>
-document.getElementById("demo").innerHTML = 5 + 6;
-</script>
-
-</body>
+<html lang="">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <tittle>Responsive Personal Portfolio Website Design | @Sadee</tittle>
+</head>
 </html>
